rebrand: add better masthead image, fix 'Learn More' button overflow into 'Featured Docs'

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1546,7 +1546,7 @@ a:hover {
 /************** 4.5 Masthead "What is DevOps Services?" **************************/
 
 .docs-masthead {
-	height: 387px;
+	min-height: 387px;
 	background-color: @color-dark-page-background;
 	color: @color-white;
 	border-bottom: #aaa solid 1px;
@@ -1558,6 +1558,7 @@ a:hover {
 	.docs-masthead-rocket {
 		.ptxl;
 		.pbl;
+		width: 85%;
 		padding-left: 75px;
 	}
 
